--- a/LineaExpres/app/src/main/res/values/strings.xml
+++ b/LineaExpres/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
+    <string name="apiURL">https://apis.fpfch.gob.mx/</string>>
+    <string name="noticiasURL">https://noticias.fpfch.gob.mx/</string>>
     <string name="app_name">PuentesFront</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
